--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,6 +1,3 @@
-#profile-card {
-    background-color: #ff6347
-}
 
 .fancy-header{
     font-family: 'Raleway', sans-serif;
@@ -15,6 +12,7 @@
     margin-bottom: 0;
 }
 
-.col-9{
-    background-color: white;
+.logo{
+    font-family: 'Orbitron', sans-serif;
+    color: #00727F;
 }
