--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -3,40 +3,61 @@
 <head th:replace="fragments/header.html :: header(title = 'Latest Posts')"></head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<div th:each="post : ${postList}">
-    <div th:id="'post-' + ${post.id}"></div>
-        <h1 th:text = "${post.title}"></h1>
-        <p th:text = "${post.body}"></p>
-        <p th:text = "${post.answer}"></p>
-        <p th:text = "${post.user.email}"></p>
 
-        <div sec:authorize = "isAuthenticated()">
-            <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
-            <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
-            <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
-        </div>
 
-    <div th:each="comment : ${post.commentList}">
-        <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-        <div sec:authorize = "isAuthenticated()">
-            <div th:if="${user.id == comment.user.id}">
-                <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+
+
+<div class="container">
+    <div class="card mb-2">
+    <div class="card-body">
+        <div th:each="post : ${postList}">
+            <div class="row">
+
+                <div class="col-1">
+                    <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                    <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
+                    <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                </div>
+                <div class="col-11">
+                            <div th:id="'post-' + ${post.id}"></div>
+                                <h1 th:text = "${post.title}"></h1>
+                                <p th:text = "${post.body}"></p>
+                                <p th:text = "${post.answer}"></p>
+                                <p th:text = "${post.user.email}"></p>
+<!--                                <div sec:authorize = "isAuthenticated()">-->
+<!--                                    <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>-->
+<!--                                    <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>-->
+<!--                                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>-->
+<!--                                </div>-->
+                            <div th:each="comment : ${post.commentList}">
+                                <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                <div sec:authorize = "isAuthenticated()">
+                                    <div th:if="${user.id == comment.user.id}">
+                                        <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                        <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                    </div>
+                                    <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
+                                    <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+                                </div>
+                                <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
+                            </div>
+
+                                <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                                <div th:if="${user.id == post.user.id}">
+                                    <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
+                                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
+                                </div>
+                    <hr>
+                </div>
             </div>
-            <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
-            <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
         </div>
-        <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
     </div>
-
-        <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-        <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-        <div th:if="${user.id == post.user.id}">
-            <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
-            <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
-        </div>
     </div>
 </div>
+
+
+
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 
 </body>
