--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,6 +1,12 @@
 h1 {
     color:  black;
+}
 
+.userprint{
+    font-size:small;
+}
+.userinfo{
+    font-weight: bold;
 }
 .register-mainBox{
     border: none !important;
