--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -8,11 +8,10 @@
 
 
 <div class="container">
-    <div class="card mb-2">
-    <div class="card-body">
-        <div th:each="post : ${postList}">
+    <div th:each="post : ${postList}">
+            <div class="card mb-2">
+            <div class="card-body">
             <div class="row">
-
                 <div class="col-1">
                     <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
                     <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
@@ -20,40 +19,48 @@
                 </div>
                 <div class="col-11">
                             <div th:id="'post-' + ${post.id}"></div>
+<!--                                    <p class="userprint" th:text = "${post.user.email}"></p>-->
+                    <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
                                 <h1 th:text = "${post.title}"></h1>
                                 <p th:text = "${post.body}"></p>
                                 <p th:text = "${post.answer}"></p>
-                                <p th:text = "${post.user.email}"></p>
+
 <!--                                <div sec:authorize = "isAuthenticated()">-->
 <!--                                    <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>-->
 <!--                                    <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>-->
 <!--                                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>-->
 <!--                                </div>-->
                             <div th:each="comment : ${post.commentList}">
-                                <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                <div sec:authorize = "isAuthenticated()">
-                                    <div th:if="${user.id == comment.user.id}">
-                                        <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                        <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                <div class="row">
+                                    <div class="col-1">
+                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
                                     </div>
-                                    <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
-                                    <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
-                                </div>
-                                <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
-                            </div>
+                                    <div class="col-11 align-self-center">
+                                        <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
 
+                                        <div th:if="${user.id == comment.user.id}">
+                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                            <button class="edit-comment-button btn-sm" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                            </div>
+                                    </div>
+                                    <hr class="m-0">
+                            </div>
+                            </div>
                                 <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                                <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                                 <div th:if="${user.id == post.user.id}">
                                     <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
                                     <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
                                 </div>
                     <hr>
-                </div>
+
             </div>
         </div>
     </div>
     </div>
+</div>
 </div>
 
 
