--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/header.html :: header(title = 'Latest Posts')"></head>
-<body>
+<body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 
 
@@ -38,24 +38,23 @@
                                         <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
                                     </div>
                                     <div class="col-11 align-self-center">
-                                        <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-
+                                        <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
                                         <div th:if="${user.id == comment.user.id}">
                                             <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                            <button class="edit-comment-button btn-sm" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
-                                            </div>
+                                            <button class="edit-comment-button btn-sm float-right p-0" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                        </div>
                                     </div>
-                                    <hr class="m-0">
+
                             </div>
                             </div>
+
                                 <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                                 <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+
                                 <div th:if="${user.id == post.user.id}">
                                     <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
                                     <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
                                 </div>
-                    <hr>
-
             </div>
         </div>
     </div>
