--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -27,7 +27,7 @@
     <div class="col-9">
         <div class="card mb-2">
             <div class="card-body">
-                <h2 class="display-1 text-center p-3">CodeOn</h2>
+                <h2 class="display-1 text-center p-3 profile-header">CodeOn</h2>
                 <p class="text-center"> Here at CodeOn we as a community strive build a community of developers that can help
                     change the world </p>
             </div>
@@ -177,6 +177,7 @@
 <!--    Interview-->
 <div class="row m-5">
     <div class="col-3">
+<!--        interview question description card-->
         <div class="card text-center">
             <div class="card-body">
                 <h1>Most Recent Interview Questions</h1>
@@ -187,56 +188,63 @@
             </div>
         </div>
     </div>
+<!--    comment card displaying info-->
     <div class="col-9">
         <div class="card mb-2">
             <div class="card-body">
                 <div th:each="post : ${interviewQuestionsList}">
-                    <div class="row">
-                        <div class="col-1">
-                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
-                            <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
-                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
-                        </div>
-                        <div class="col-11">
-                            <div th:id="'post-' + ${post.id}">
-                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                <h1 th:text = "${post.body}"></h1>
-                                <p th:text = "${post.title}"></p>
-                                <p class = "mb-0" th:text = "${post.answer}"></p>
-                                <hr class="m-0">
-                                <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
-                                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
-                                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
-                                </div>
-                            </div>
-
-                            <div th:each="comment : ${post.commentList}">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
-                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
-                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
-                                    </div>
-                                    <div class="col-11 align-self-center p- commentrow">
-                                        <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                        <div th:if="${user.id == comment.user.id}">
-                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                            <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr class="m-0">
-                            </div>
-                            <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                            <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-                            <div th:if="${user.id == post.user.id}">
-                                <a th:href="@{|/interview-posts/edit/${post.id}|}"><button>Edit my post</button></a>
-                                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class="row">
+    <div class="col-1">
+        <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+        <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
+        <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+    </div>
+    <div class="col-11">
+        <div th:id="'post-' + ${post.id}">
+            <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
+            <h1 th:text = "${post.body}"></h1>
+            <p th:text = "${post.title}"></p>
+            <p class = "mb-0" th:text = "${post.answer}"></p>
+            <hr>
+            <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                <img th:src="${post.imageURLList[0].url}" alt="post-image">
             </div>
+        </div>
+                <div th:each="comment : ${post.commentList}">
+<div class="row">
+<!--                                    THis is where the comment ratings are -->
+    <div class="col-1">
+        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+    </div>
+<!--                                    This is where the comment body goes-->
+    <div class="col-11 align-self-center p- commentrow">
+        <div class="media">
+                <img th:src="${comment.user.profileImageURL}" alt="profile"class="mr-3 rounded-circle" style="width:60px;">
+        <div class="media-body">
+                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${comment.dateTime}"></span> by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+            <div th:if="${user.id == comment.user.id}">
+                <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+            </div>
+        </div>
+        </div>
+<hr>
+    </div>
+</div>
+                </div>
+            <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+            <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+            <div th:if="${user.id == post.user.id}">
+                <a th:href="@{|/interview-posts/edit/${post.id}|}"><button>Edit my post</button></a>
+                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
+            </div>
+    </div>
+</div>
+                    <hr>
+            </div>
+        </div>
         </div>
     </div>
 </div>
@@ -282,22 +290,28 @@
 
                             <div th:each="comment : ${post.commentList}">
                                 <div class="row">
+                                    <!--                                    THis is where the comment ratings are -->
                                     <div class="col-1">
                                         <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
                                         <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
                                         <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
                                     </div>
+                                    <!--                                    This is where the comment body goes-->
                                     <div class="col-11 align-self-center p- commentrow">
-                                        <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                        <div th:if="${user.id == comment.user.id}">
-                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                            <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                        <div class="media">
+                                            <img th:src="${comment.user.profileImageURL}" alt="profile"class="mr-3 rounded-circle" style="width:60px;">
+                                            <div class="media-body">
+                                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${comment.dateTime}"></span> by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                                                <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                                <div th:if="${user.id == comment.user.id}">
+                                                    <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                                </div>
+                                            </div>
                                         </div>
+                                        <hr>
                                     </div>
                                 </div>
-                                <hr class="m-0">
                             </div>
-
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                             <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                             <div th:if="${user.id == post.user.id}">
@@ -306,12 +320,12 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 
 
@@ -356,20 +370,27 @@
 
                             <div th:each="comment : ${post.commentList}">
                                 <div class="row">
+                                    <!--                                    THis is where the comment ratings are -->
                                     <div class="col-1">
                                         <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
                                         <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
                                         <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
                                     </div>
+                                    <!--                                    This is where the comment body goes-->
                                     <div class="col-11 align-self-center p- commentrow">
-                                        <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                        <div th:if="${user.id == comment.user.id}">
-                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                            <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                        <div class="media">
+                                            <img th:src="${comment.user.profileImageURL}" alt="profile"class="mr-3 rounded-circle" style="width:60px;">
+                                            <div class="media-body">
+                                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${comment.dateTime}"></span> by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                                                <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                                <div th:if="${user.id == comment.user.id}">
+                                                    <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                                </div>
+                                            </div>
                                         </div>
+                                        <hr>
                                     </div>
                                 </div>
-                                <hr class="m-0">
                             </div>
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                             <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
@@ -379,6 +400,7 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
                 </div>
             </div>
         </div>
